@@ -1,13 +1,11 @@
 package main.commands;
 
+import com.google.common.collect.ImmutableList;
 import main.utils.instances.CustomPlayerDataHolder;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
-import org.jetbrains.annotations.Nullable;
-
-import java.util.List;
 
 import static main.utils.Constants.playerData;
 import static main.utils.Constants.tpa;
@@ -34,7 +32,7 @@ public class TpaLock implements CommandExecutor, TabExecutor {
     }
 
     @Override
-    public @Nullable List<String> onTabComplete(CommandSender sender, Command command, String label, String[] args) {
-        return List.of();
+    public java.util.List<String> onTabComplete(CommandSender sender, Command command, String label, String[] args) {
+        return ImmutableList.of();
     }
 }
